--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,38 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 100%;
+  padding-top: 10px;
+}
+
+.card {
+  width: 300px;
+  height: 500px;
+  border-radius: 20px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.symbol-top {
+  padding: 20px;
+  font-size: 80px;
+  font-family: "Times New Roman";
+}
+
+.number {
+  text-align: center;
+  font-size: 100px;
+  font-family: "Times New Roman";
+}
+
+.symbol-bottom {
+  padding: 20px;
+  font-size: 80px;
+  font-family: "Times New Roman";
+  transform: rotate(180deg);
+}
